--- a/Thesis/prior.tex
+++ b/Thesis/prior.tex
@@ -1,6 +1,6 @@
 \chapter{Prior Work}
 \label{chap:prior}
-In the previous chapter, we briefly introduced the basic ideas of CL and LMs. In this chapter, we provide a fuller treatment of these areas. In particular, in \fullref{chap:prior:sec:arch}, we describe the building blocks many language models use. Then, in \fullref{chap:prior:sec:cl}, we give a technical overview of CL methodology focused on its implementations in Machine Translation. In \fullref{chap:prior:sec:lm}, we provide a technical overview of LMs concentrating on how many current systems have structured the problem and the effect various implementations have on downstream performance.  Finally, in \fullref{chap:prior:sec:eval}, we introduce a suite of evaluation frameworks that have become the standard for understanding the quality of LMs.
+In the previous chapter, we briefly introduced the basic ideas of CL and LMs. In this chapter, we provide a fuller treatment of these areas. In particular, in Section \ref{chap:prior:sec:arch}, we describe the building blocks many language models use. Then, in Section \ref{chap:prior:sec:cl}, we give a technical overview of CL methodology focused on its implementations in Machine Translation. In Section \ref{chap:prior:sec:lm}, we provide a technical overview of LMs concentrating on how many current systems have structured the problem and the effect various implementations have on downstream performance.  Finally, in Section \ref{chap:prior:sec:eval}, we introduce a suite of evaluation frameworks that have become the standard for understanding the quality of LMs.
 \input{Thesis/arch}
 \input{Thesis/learningmethods}
 \input{Thesis/lm}
