--- a/Thesis/results.tex
+++ b/Thesis/results.tex
@@ -2,46 +2,47 @@
 \label{chap:results}
 \section{Bengio Style Curricula}
 \label{chap:results:secBS}
-As covered in our methodology section, we implemented the Bengio Style (BS) curricula across the two sizes of wikitext datasets. We evaluate model performance on the validation portion at the end of each epoch, and once the model has trained for ten epochs, we evaluate using JIANT's \cite{Pruksachatkun2020jiantAS} implemented GLUE baseline. Unless another metric is explicitly mentioned, the glue sub task metric is accuracy.
-As seen in \fullref{table:corpuscurriculaperplexity}, we see that the baseline method implementations outperform the BS across the entire training regime. Initially, while the model is training on the limited corpus, it performs worse on the validation set. As the model reaches the original training data, the resulting embeddings reach close to the baseline perplexity but can never pass the baseline method. By the 7th epoch, both methods have virtually identical perplexities. Another interesting trend is that when the full corpus is introduced (epoch 6), the validation perplexity briefly increases. The final observation is that the baseline method reaches low perplexity on a large corpus much faster than the BS method. The baseline method can achieve a perplexity under 100 by the end of the first epoch, while the BS method cannot do so until the end of the 5th. \\
+As covered in our methodology section, we implemented the Corpus Replacement Simplification (CRS) curricula across the two sizes of wikitext datasets. We evaluate model performance on the validation portion at the end of each epoch, and once the model has trained for ten epochs, we evaluate using JIANT's \cite{Pruksachatkun2020jiantAS} implemented GLUE baseline. Unless another metric is explicitly mentioned, the GLUE sub-task metric is accuracy.
+As seen in Figure \ref{fig:cs-perp-2} and Figure \ref{fig:cs-perp-103}, we see that the baseline method implementations outperform the CRS across the entire training regime in terms of validation perplexity. Initially, while the model is training on the limited corpus, it performs worse on the validation set. As the model reaches the original training data, the resulting embeddings reach close to the baseline perplexity but can never pass the baseline method. By the 7th epoch, both methods have virtually identical perplexities. Another interesting trend is that when the full corpus is introduced (epoch 6), the validation perplexity briefly increases. The final observation is that the baseline method reaches low perplexity on a large corpus much faster than the CRS method. The baseline method can achieve a perplexity under 100 by the end of the first epoch, while the CRS method cannot do so until the end of the 5th. \\
 \begin{figure}[h]
 \centering
 \includegraphics[width=10cm, height=10cm]{Thesis/images/wikitext-2BS.png}
-\caption{GLUE results for BS vs. baseline.}
+\caption{Perplexity on Validation portion of wikitext2.}
+\label{fig:cs-perp-2}
 \end{figure}
 \begin{figure}[h]
 \centering
-\includegraphics[width=10cm, height=10cm]{Thesis/images/wikitext-103BS.png}
-\caption{GLUE results for BS vs. baseline.}
+\includegraphics[width=15cm, height=10cm]{Thesis/images/wikitext-103BS.png}
+\caption{Perplexity on Validation portion of wikitext103.}
+\label{fig:cs-perp-103}
 \end{figure}
 \begin{table}[]
 \begin{tabular}{|l|l|l|l|l|l|}
 \hline
-Corpus       & wikitext-103 & wikitext-103 & wikitext-2 & wikitext-2 & billion word               \\ \hline \hline
-Method       & NC           & BS           & BS         & NC         & NC                         \\ \hline
-Score        & 0.671        & 0.657        & 0.607      & 0.59       & 0.595                      \\ \hline
-Cola(MCC)    & 0.281        & 0.254        & 0.06       & 0          & 0                          \\ \hline
-SST          & 0.862        & 0.852        & 0.742      & 0.7        & 0.852                      \\ \hline
-MRPC(F1)     & 0.866        & 0.875        & 0.854      & 0.846      & 0.823                      \\ \hline
-MRPC         & 0.801        & 0.816        & 0.789      & 0.775      & 0.711                      \\ \hline
-STS-B(Pear)  & 0.765        & 0.794        & 0.683      & 0.661      & 0.547                      \\ \hline
-STS-B(Spear) & 0.773        & 0.793        & 0.684      & 0.663      & 0.562                      \\ \hline
-QQP(F1)      & 0.716        & 0.738        & 0.697      & 0.701      & 0.733                      \\ \hline
-QQP          & 0.763        & 0.785        & 0.745      & 0.753      & 0.765                      \\ \hline
-MNLI         & 0.644        & 0.662        & 0.566      & 0.585      & 0.671                      \\ \hline
-QNLI         & 0.761        & 0.719        & 0.726      & 0.717      & 0.719                      \\ \hline
-RTE          & 0.61         & 0.588        & 0.581      & 0.542      & 0.48                       \\ \hline
-WNLI         & 0.535        & 0.437        & 0.563      & 0.563      & 0.563                      \\ \hline
-Diagnostic   & 0.139        & 0.162        & 0.119      & 0.13       & \multicolumn{1}{l|}{0.155} \\ \hline
+Method     & Baseline wiki103& CRS wiki103 & Baseline wiki2 & CRS wiki2 & Baseline BWC               \\ \hline \hline
+\textbf{Overall Score}        & \textbf{0.671}        & 0.657        & 0.607      & 0.59       & 0.595                      \\ \hline
+Cola(MCC)    & \textbf{0.281}        & 0.254        & 0.060       & 0.000          & 0.000                          \\ \hline
+SST          & \textbf{0.862}        & 0.852        & 0.742      & 0.7        & 0.852                      \\ \hline
+MRPC(F1)     & 0.866        & \textbf{0.875}        & 0.854      & 0.846      & 0.823                      \\ \hline
+MRPC         & 0.801        & \textbf{0.816}        & 0.789      & 0.775      & 0.711                      \\ \hline
+STS-B(Pear)  & 0.765        & \textbf{0.794}        & 0.683      & 0.661      & 0.547                      \\ \hline
+STS-B(Spear) & 0.773        & \textbf{0.793}        & 0.684      & 0.663      & 0.562                      \\ \hline
+QQP(F1)      & 0.716        & \textbf{0.738}        & 0.697      & 0.701      & 0.733                      \\ \hline
+QQP          & 0.763        & \textbf{0.785}        & 0.745      & 0.753      & 0.765                      \\ \hline
+MNLI         & 0.644        & 0.662        & 0.566      & 0.585      & \textbf{0.671}                      \\ \hline
+QNLI         & \textbf{0.761}        & 0.719        & 0.726      & 0.717      & 0.719                      \\ \hline
+RTE          & \textbf{0.610}         & 0.588        & 0.581      & 0.542      & 0.480                       \\ \hline
+WNLI         & 0.535        & 0.437        & \textbf{0.563}      & \textbf{0.563}      & \textbf{0.563}                      \\ \hline
+Diagnostic   & 0.139        & \textbf{0.162}        & 0.119      & 0.130       & 0.155 \\ \hline
 \end{tabular}
-\caption{GLUE results for BS vs. baseline.\\ Model performance is better with BS when the corpus is small but as corpus scales baseline method outperforms BS}
+\caption{GLUE results for CRS vs. baseline.}
 \label{table:glue-corpus}
 \end{table}
-The effect of the curricula looking at GLUE can be found in \fullref{table:glue-corpus} we see a few interesting results. First off, we find that the pubic ELMo implementation performs worse on the GLUE dataset. It is unclear why this is, and we will not focus on this further. Next, we see that when the training corpus is small, the BS implementation outperforms the baseline method by a sizable margin. As the corpus size grows, the baseline performance passes all other methods. There is high variability in individual task scores such that STS-B and the Diagnostic tests are much better with the BS system, while COLA, WNLI, and RTE are much better in the baseline method. One possible cause of this is BS models learn better representations for binary classifications but not better representations for multi-label classification. If we exclude WNLI, the BS methods outperform the baseline methods by a wide margin. We can also observe various tasks that the small corpus models cannot learn as both wikitext-2 models achieve 0 on COLA. We believe this may result from the model learning a flipped representation early on and not being able to recover from it. 
+The effect of the curricula looking at GLUE can be found in Table \ref{table:glue-corpus} and we refer to the WikiText-103 corpus as wiki103, Wikitext-2 as wiki2 and the Billion Word Corpus as BWC. First, we find that the pubic ELMo implementation performs worse on the GLUE dataset. It is unclear why this is, and we will not focus on this further. Next, we see that when the training corpus is small, the BS implementation outperforms the baseline method by a sizable margin. As the corpus size grows, the baseline performance passes all other methods. There is high variability in individual task scores such that STS-B and the Diagnostic tests are much better with the BS system, while COLA, WNLI, and RTE are much better in the baseline method. One possible cause of this is BS models learn better representations for binary classifications but not better representations for multi-label classification. If we exclude WNLI, the BS methods outperform the baseline methods by a wide margin. We can also observe various tasks that the small corpus models cannot learn as both wikitext-2 models achieve 0 on COLA. We believe this may result from the model learning a flipped representation early on and not being able to recover from it. #Size of fine tuning datasets may be relevant
 \section{Competence-Based Curricula}
 Now we focus our discussion on the results of the competence curricula. In this section, DEP represents dependency parse depth, POS represents part of speech diversity, and CC represents competence curricula.
 \subsection{Wikitext-2}
-Looking at performance on the small corpus \fullref{fig:wikitext2-line-perplexity} and \fullref{fig:wikitext2-sentence-perplexity} we see that all the curricula methods start to overfit on the training corpus after about 16 of the 24 epochs (which equates to when the curriculum training is finished). The full data underpinning the figures mentioned above can be found in the \fullref{appendix}. Despite seeing over-fitting, we see that POS and DEP generally learn some of the lowest perplexity on the validation set. Looking at the difference between sentence-level and line-level training, we see a closer grouping in model performance distribution, which we attribute to a common sentence-level structure. Finally, we see that the best performance is achieved by the non-curricula baseline (initial competence set to 1) with a perplexity of 770, followed by Random with a perplexity of 2105. Despite the success of these curriculums, all are orders of magnitude above the baseline score of 151. \\
+Looking at performance on the small corpus \fullref{fig:wikitext2-line-perplexity} and \fullref{fig:wikitext2-sentence-perplexity} we see that all the curricula methods start to overfit on the training corpus after about 16 of the 24 epochs (which equates to when the curriculum training is finished). The full data underpinning the figures mentioned above can be found in the \fullref{appendix}. Despite seeing over-fitting, we see that POS and DEP generally learn some of the lowest perplexity on the validation set. Looking at the difference between sentence-level and line-level training, we see a closer grouping in model performance distribution, which we attribute to a common sentence-level structure. Finally, we see that the best performance is achieved by the non-curricula baseline (initial competence set to 1) with a perplexity of 770, followed by Random with a perplexity of 2105. Despite the success of these curriculums, all are orders of magnitude above the baseline score of 151. We believe this failure of t #why is it so much worse\\
 As we move our focus to GLUE results, we see a very different picture as the curriculum methods generally outperform the baselines by a wide margin. We see that models do not seem to learn any representation that can be used by WNLI, as those results are all virtually identical. Surprisingly it does not seem that a more optimal method for splitting the corpus is apparent as sentence-based training achieves a similar result in line-based training. We believe this means we cannot make a strong generalization that can be made about the effects of what method is used for training. The final point to observe is that nearly every curricula method outperforms the baseline implementation. Perhaps most surprising, random curricula performing second best when measure by overall glue score despite their being no motivation to the structure the model sees. \\
 Overall when training on wikitext-2, we find that competency-based curricula methods provide somewhat of a mixed message. While performance on the validation portion is much worse, GLUE performance is much better. Since we believe what is most important in a model is how well the language representations can transfer to downstream tasks, we argue that with small training datasets CBC outperform traditional training regimes.
 
@@ -132,15 +133,16 @@ sentence & Competence Curriculum & dependency parse depth & 0.5865 & -0.04 & 0.8
 \caption{Model perplexity on wikitext103-sentence by curricula.}
 \end{figure}
 \section{Discussion}
-We find it useful to formulate CL as moving from sampling without replacement to sampling with replacement with an ever-growing population. As a result, our implementations of CBC do not guarantee that the model will see the entire dataset ten times, and as a result, the distribution of the data seen in training is likely different from the distribution of the validation dataset.
-We believe this is why the CL implementations can never generalize their performance in the train portion of the corpus to the validation portion. \\
-Despite this inability to learn the training distribution, CBC methods are still able to transfer well to understanding tasks, which makes us think that what is important in pre-training is not the actual task but what the model can learn from the task. This finding is interesting because it challenges the notion that a model must fit the target dataset well to learn a representation that transfers well to downstream tasks. We find that even the models with really high validation perplexities can still learn good representations for our transfer task. \\ \\
-Another observation our data leads us to is how the training distribution's tweaking can allow the models to do better in transfer tasks because it is unable to overfit to the small data. Since our implementation generates some form of continually changing data distribution from where random batches are sampled, the train distribution is continually changing. As a result, the training distribution is constantly changing; it harder for a model to overfit because it does not have full access to the true training distribution. In some ways, CL methods can be seen as a regularizer to prevent model overfitting. As shown by the effectiveness of random curricula, we believe that CL is essentially acting as a method of representing a larger dataset than used to train. Instead of having one consistent dataset of size $N$ we have a dataset of $size = \sum_{t=0} N * \lambda_t$ datasets. We believe this is a potentially powerful observation which we would like to explore further down the line.  \\
-Independently of what heuristic is used in early training, some portion (usually the easy portion) is oversampled while in other portions (usually hard portion), examples are under-sampled. Recently, work in understanding how NN work has lead to the discovery there are sub-networks within the larger NN, which are more optimal for the task \cite{Frankle2019TheLT}. The process of training a DNN can be thought of as an architecture search within the larger randomly initiated network by decreasing the weights of sub-optimal sub-networks and increasing the weights of optimal sub-networks. Since the CL method is oversampling some portion of the dataset during early training, CL methods will favor sub-networks that are likely not optimal for the full data distribution. We believe this may be the cause of why CL methods underperform non-CL methods on the training task. One way to address this shortcoming would be to modify curricula methods to create ever-changing distributions that are close to the original distribution. In other words, in early training, instead of oversampling from the lower strata of the CDF CL methods could sample from slightly distorted distributions of the same CDF.\\
+We find it useful to formulate CL as moving from sampling without replacement to sampling with replacement with an ever-growing population. As a result, our implementations of CBC do not guarantee that the model will see the entire dataset ten times, and as a result, the distribution of the data seen in training is likely different from the distribution of the validation dataset. We believe this is why the CL implementations can never generalize their performance in the train portion of the corpus to the validation portion. To avoid this one such approach would be to over sample easy portions of the training data in early training and extend the length of this epoch. This way the model could build of easy example but still see every part of the training corpus at least ten times. \\
+Despite this inability to learn the training distribution, CBC methods are still able to transfer well to understanding tasks, which makes us think that what is important in pre-training is not the actual task but what the model can learn from the task. This finding is interesting because it challenges the notion that a model must fit the target dataset well to learn a representation that transfers well to downstream tasks. We find that even the models with high validation perplexities can still learn good representations for our transfer task. \\
+Another observation our data leads us to is how the training distribution's tweaking can allow the models to do better in transfer tasks because it is unable to overfit to the small pre-training corpus. Since our implementation generates some form of continually changing data distribution from where random batches are sampled, the train distribution is continually changing. Since the training regime is constantly changing, we CBC is effectively simulating a larger, more complex distribution. On one hand, this larger artificial training set causes the model never learns a good representation of the training corpus which we see in model perplexity. On the other hand, since it never learns a good representation of the training corpus it can effectively simulate a much larger training corpus which produces a LR which when measured in terms of transfer performance is much better. This is especially apparent in the effectiveness of random curricula, where the random training structure still leads to improved transfer performance. Instead of having one consistent dataset of size $N$ we have a dataset of $size = \sum_{t=0} N * \lambda_t$ datasets.  \\
+Independently of what heuristic is used in early training, some portion (usually the easy portion) is oversampled while in other portions (usually hard portion), examples are under-sampled. Recently, work in understanding how NN work has lead to the discovery there are sub-networks within the larger NN, which are more optimal for the task \cite{Frankle2019TheLT}. The process of training a DNN can be thought of as an architecture search within the larger randomly initiated network by decreasing the weights of sub-optimal sub-networks and increasing the weights of optimal sub-networks. Since the CL method is oversampling some portion of the dataset during early training, CL methods will favor sub-networks that are likely not optimal for the full data distribution. We believe this may be the cause of why CL methods underperform non-CL methods on the training task. One way to address this shortcoming would be to modify curricula methods to create ever-changing distributions that are close to the original distribution. In other words, in early training, instead of oversampling from the lower strata of the CDF CL methods could sample from slightly distorted distributions of the same CDF. One such implementation may divide the data into deciles and sample from each decile for each epoch. In other words instead of sampling from the whole distribution the first training epoch would sample from the lowest 10\% of the CDF while the last training epoch would sample from the highest 10\%. \\ 
 An additional observation more focused on LM training is there is no marked difference in the effects of training with sentence-based corpora vs. that of line-based datasets. This, matched with no generalized Superior curricula performance, heuristic makes us believe that language models learn more from the random distribution of a textual corpus than any structure experimenters try to introduce. Our experiments, in many ways, show how robust and efficient regular stochastic sampling is. The cost of shuffling happens once instead of every batch, and no additional work needs to go to crafting the curricula.\\
-Circling back on the questions we asked in \fullref{chap:method}:
+With regard to improving the efficiency of LM training unfortunately our models had the opposite effect. Our implementation of CBC introduces an overhead which makes training over 40\% less efficient. In seeing the effective impact of successful training datasets like the Toronto Book corpus we believe that successful CL methods need to focus on rebalancing training distribution in a model independent method. By rebalancing data distributions CL methods can ensure that the cost of compute only happens once instead of the $n$ times the data is resampled in model training and the $m$  potential models that use this data. Moreover, by moving curriculum generation outside of model training CL methods can have a larger impact because researchers only need to train on a new dataset instead of changing their model code. \\
+When we focus on the difference between sentence based sampling vs line based sampling we find a huge difference in model performance on the validation corpus but no noticeable difference in the GLUE. In evaluating the data we believe this is caused by the inefficiency introduced by our padding token. Since sentence based sampling has ~30\% more padding tokens the model is able to learn substantially less from every sample when compared to the line corpus. This greatly effects the models ability to learn the training distribution but does not have any generalizable impact on the transfer performance. This is in line with the purpose of pretraining as the goal is not actually to learn the training data but use it to form a generalizable understanding based on a lose connection. As a result being unable to fully learn the training distribution does not seem to effect the learned signal that is transferred. \\
+Reflecting on our experiments and questions posed earlier in the dissertation in Section \ref{chap:method}:
 \begin{enumerate}
 \item CL can help converge to a more optimal global minima when the training corpus is small. As corpus size scales, the positive impact of CL disappears.
 \item The downstream representation learned via CL outperforms non-curricula methods when the corpus size is small, but as the corpus size grows, CL methods no longer generate the best representation.
-\item CL methods do not help the model convergence speed in any noticeable way.
+\item CL methods do not help the model convergence speed in any noticeable way and in our use of padding tokens CL methods actually make training fare less efficient than non CL methods.
 \end{enumerate}
