--- a/Thesis/uwthesis.tex
+++ b/Thesis/uwthesis.tex
@@ -38,7 +38,7 @@
 \begin{document}
 \prelimpages
 \raggedbottom
-\Title{Explorations In Curriculum Learning Methods For Training Contextual Language Models}
+\Title{Explorations In Curriculum Learning Methods For Training Language Models}
 \Author{Daniel Campos}
 \Year{2020}
 \Program{Department of Linguistics}
@@ -48,7 +48,7 @@
 \copyrightpage
 \titlepage  
 \setcounter{page}{-1}
-\abstract{Understanding language depending on the context of its usage has always been one of the core goals of Natural Language Processing (NLP). Recently, contextual word representations created by language models (LM) like ELMo, BERT, ELECTRA, and RoBERTA have provided robust representations of natural language which serve as the language understanding component for a diverse range of downstream tasks like Information Retrieval (IR), Question Answering (QA), and Information Extraction (IE). The use of curriculum learning (CL) is a method which employs adding a structured training regime instead of the traditional random sampling. Research areas like computer vision (CV) and machine translation (MT) have used CL methods in model training to improve model training speed and model performance. While LMs have proven transformational for the NLP community, these models have proven expensive, energy-intensive, and challenging, which has inspired researchers to explore new training methods. In this thesis, we explore the effect of CL in the training of LMs. Using wikitext-2 and wikitext-103 and evaluating word representation transfer learning (TL), we find that CL methods produce models that outperform their traditionally trained counterparts while the training corpus is small, but as the training corpus scale, the effects of CL methods become negative}
+\abstract{Understanding language depending on the context of its usage has always been one of the core goals of natural language processing. Recently, contextual word representations created by language models like ELMo, BERT, ELECTRA, and RoBERTA have provided robust representations of natural language which serve as the language understanding component for a diverse range of downstream tasks like information retrieval, question answering, and information extraction. The use of curriculum learning is a method that employs a structured training regime instead of the traditional random sampling. Research areas like computer vision and machine translation have used curriculum learning methods in model training to improve model training speed and model performance. While language models have proven transformational for the natural language processing community, these models have proven expensive, energy-intensive, and challenging to train, which has inspired researchers to explore new training methods. In this thesis, we explore the effect of curriculum learning in the training of language models. Using wikitext-2 and wikitext-103 and evaluating word representation transfer learning , we find that curriculum learning methods produce models that outperform their traditionally trained counterparts while the training corpus is small, but as the training corpora scale, the effects of curriculum learning methods become negative.}
 \tableofcontents
 \listoffigures
 \listoftables 
