--- a/Thesis/uwthesis.bib
+++ b/Thesis/uwthesis.bib
@@ -19,13 +19,22 @@
   volume={323},
   pages={203-213}
 }
-@article{Frankle2019TheLT,
-  title={The Lottery Ticket Hypothesis: Finding Sparse, Trainable Neural Networks},
-  author={Jonathan Frankle and Michael Carbin},
-  journal={arXiv: Learning},
-  year={2019}
+@inproceedings{
+frankle2018the,
+title={The Lottery Ticket Hypothesis: Finding Sparse, Trainable Neural Networks},
+author={Jonathan Frankle and Michael Carbin},
+booktitle={International Conference on Learning Representations},
+year={2019},
+url={https://openreview.net/forum?id=rJl-b3RcF7},
 }
- @misc{QQP, title={Quora Question Pairs}, url={https://www.kaggle.com/c/quora-question-pairs/overview}, journal={Kaggle}} 
+@InProceedings{Zhu_2015_ICCV,
+    title = {Aligning Books and Movies: Towards Story-Like Visual Explanations by Watching Movies and Reading Books},
+    author = {Zhu, Yukun and Kiros, Ryan and Zemel, Rich and Salakhutdinov, Ruslan and Urtasun, Raquel and Torralba, Antonio and Fidler, Sanja},
+    booktitle = {The IEEE International Conference on Computer Vision (ICCV)},
+    month = {December},
+    year = {2015}
+}
+ @misc{QQP, url={https://www.quora.com/q/quoradata/First-Quora-Dataset-Release-Question-Pairs}, journal={First Quora Dataset Release: Question Pairs}, publisher={Quora}, author={Csernai, Kornél}, year={2017}, month={Jan}} 
 @article{Jean2015OnUV,
   title={On Using Very Large Target Vocabulary for Neural Machine Translation},
   author={S. Jean and Kyunghyun Cho and R. Memisevic and Yoshua Bengio},
@@ -50,8 +59,7 @@
 @unpublished{spacy2,
     AUTHOR = {Honnibal, Matthew and Montani, Ines},
     TITLE  = {{spaCy 2}: Natural language understanding with {B}loom embeddings, convolutional neural networks and incremental parsing},
-    YEAR   = {2017},
-    No
+    YEAR   = {2017}}
 @article{Taylor1953ClozePA,
   title={“Cloze Procedure”: A New Tool for Measuring Readability},
   author={W. L. Taylor},
